--- a/package.json
+++ b/package.json
@@ -1,21 +1,28 @@
 {
   "name": "clock",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "ElenaLomakina",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
+    "style-loader": "^0.20.2",
     "webpack": "^3.11.0"
   },
-  "dependencies": {
-    "css-loader": "^0.28.9",
-    "style-loader": "^0.20.2"
-  }
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ElenaLomakina/Clock.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ElenaLomakina/Clock/issues"
+  },
+  "homepage": "https://github.com/ElenaLomakina/Clock#readme",
+  "description": ""
 }
